# rust-performance-test

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.amd  Dockerfile.arm  create-users-test.js  docker-compose.yml  init.sql  nginx.conf  resultados.txt
src/: db.rs  handlers.rs  main.rs  models.rs
