[package]
name = "rinha-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum com suporte a serve()
axum = { version = "0.6.20", features = ["http1", "json", "tokio"] }

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Serialização JSON
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
