[package]
name = "rinha-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server
axum = { version = "0.6.20", default-features = false, features = ["http1", "json"] }

# HTTP server low-level
hyper = "0.14"

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# Serialização JSON
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
