[package]
name = "rinha-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["http1", "json", "tokio"] }
tokio = { version = "1.28", features = ["full"] }
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-rustls", "uuid"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
num_cpus = "1.16"
